# -LangChainLearn

./: .env.example  .gitignore  README.md
CH1/ch1/: README.md
CH2/: README.md  pyproject.toml
CH2/2-2/: README.md  app_gemini.py
CH2/2-3/: app_gemini.py
CH2/2-4/: app_gemini.py
CH3/: README.md  pyproject.toml
CH3/3-1/: app_gemini.py
CH3/3-2/: app_gemini.py
CH3/3-3/: app_gemini.py
CH4/demo1/: README.md  pyproject.toml
CH4/demo1/demo1/: app_gemini.py  demo4-1.py  demo4-1_gemini.py  demo4-2_gemini.py  demo4-3.py  demo4-3_gemini.py  demo4-4_gemini.py  demo4-5.py  demo4-5_gemini.py  demo4-6_gemini.py  demo4-7_gemini.py  demo4-7_gemini_interactive.py  wife_translator.py
